--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1956,10 +1956,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse21(data):\n",
+    "  monkeys = {}\n",
+    "  for i in data:\n",
+    "    monkeys[i[0]] = int(i[1]) if str.isnumeric(i[1]) else i[1].split(' ')\n",
+    "  return monkeys\n",
+    "\n",
+    "data21 = parse21(data(21, lambda x: x.split(': ')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160274622817992"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calculate(monkey, monkeys):\n",
+    "  yell = monkeys[monkey]\n",
+    "  if not isinstance(yell, list):\n",
+    "    return yell\n",
+    "  # print(monkey, monkeys[monkey])\n",
+    "  a, op, b = yell\n",
+    "  expr = f'{calculate(a, monkeys)} {op} {calculate(b, monkeys)}'\n",
+    "  # print(expr)\n",
+    "  return eval(expr)\n",
+    "\n",
+    "int(calculate('root', data21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3087390115721"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.optimize import minimize_scalar\n",
+    "\n",
+    "def day21(monkeys):\n",
+    "  monkeys['root'][1] = '-'\n",
+    "\n",
+    "  def loss(humn):\n",
+    "    monkeys['humn'] = humn\n",
+    "    guess = calculate('root', monkeys)\n",
+    "    return guess * guess\n",
+    "  \n",
+    "  tol = 1e-6\n",
+    "  while abs(calculate('root', monkeys)) > 0.5:\n",
+    "    tol /= 10\n",
+    "    minimize_scalar(loss, tol=tol)\n",
+    "  return round(monkeys['humn'])\n",
+    "\n",
+    "day21(data21.copy())"
+   ]
   }
  ],
  "metadata": {
