--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1980,28 +1980,26 @@
        "160274622817992"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def calculate(monkey, monkeys):\n",
+    "def mcalculate(monkey, monkeys):\n",
     "  yell = monkeys[monkey]\n",
     "  if not isinstance(yell, list):\n",
     "    return yell\n",
-    "  # print(monkey, monkeys[monkey])\n",
     "  a, op, b = yell\n",
-    "  expr = f'{calculate(a, monkeys)} {op} {calculate(b, monkeys)}'\n",
-    "  # print(expr)\n",
+    "  expr = f'{mcalculate(a, monkeys)} {op} {mcalculate(b, monkeys)}'\n",
     "  return eval(expr)\n",
     "\n",
-    "int(calculate('root', data21))"
+    "int(mcalculate('root', data21))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2008,7 @@
        "3087390115721"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,17 +2021,31 @@
     "\n",
     "  def loss(humn):\n",
     "    monkeys['humn'] = humn\n",
-    "    guess = calculate('root', monkeys)\n",
+    "    guess = mcalculate('root', monkeys)\n",
     "    return guess * guess\n",
     "  \n",
     "  tol = 1e-6\n",
-    "  while abs(calculate('root', monkeys)) > 0.5:\n",
+    "  while abs(mcalculate('root', monkeys)) >= 0.5:\n",
     "    tol /= 10\n",
     "    minimize_scalar(loss, tol=tol)\n",
     "  return round(monkeys['humn'])\n",
     "\n",
     "day21(data21.copy())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 22"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
