--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2042,10 +2042,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_directions(directions):\n",
+    "  result = []\n",
+    "  while match := re.match('([R,L]?\\d+)', directions):\n",
+    "    step = match[1]\n",
+    "    result.append(('' if str.isdigit(step[0]) else step[0], int(step[1:])))\n",
+    "    directions = directions[match.end():]\n",
+    "  return result\n",
+    "\n",
+    "def parse22() -> list[T]:\n",
+    "  with open(f\"./data/day22.txt\") as f:\n",
+    "    result = [line.rstrip() for line in f.readlines()]\n",
+    "  map = result[:-2]\n",
+    "  return map, (0, map[0].find('.')), (0, 1), parse_directions(result[-1])\n",
+    "\n",
+    "data22 = parse22()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "U -1, 0\n",
+    "R 0, 1\n",
+    "D 1, 0\n",
+    "L -1 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_turn(current, turn):\n",
+    "  if not turn:\n",
+    "    return current\n",
+    "  sign = 1 if (current[0] == 0) ^ (turn == 'R') else -1\n",
+    "  return (sign * current[1], sign * current[0])\n",
+    "\n",
+    "def tuple_add(a, b):\n",
+    "  return tuple(a[i] + b[i] for i in range(len(a)))\n",
+    "\n",
+    "def make_move(current, diff, map):\n",
+    "  (y, x) = tuple_add(current, diff)\n",
+    "  if y >= len(map)-1 or x >= len(map[y])-1 or map[y][x] == ' ':\n",
+    "    pos = wrap_position(current, diff, map)\n",
+    "  else:\n",
+    "    pos = map[y][x]\n",
+    "  return current if pos == '#' else (y, x)\n",
+    "\n",
+    "def wrap_position(current, diff, map):\n",
+    "  y, x = current\n",
+    "  # Wrap along x axis (across y)\n",
+    "  if diff[0] == 0:\n",
+    "    search = map[y].find if diff[1] == 1 else map[y].rfind\n",
+    "    return (y, (min if diff[1] == 1 else max)(search('#'), search('.')))\n",
+    "  # Wrap along y axis (across x)\n",
+    "  y = 0 if diff[0] == 1 else len(map)-1\n",
+    "  for _ in range(len(map)):\n",
+    "    pos = map[y][x]\n",
+    "    if pos == '.' or pos == '#':\n",
+    "      return (y, x)\n",
+    "    y += diff[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 8)\n",
+      "(-5, 8)\n",
+      "(-5, 9)\n",
+      "(-10, 9)\n",
+      "(-10, 13)\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [152], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[39mprint\u001b[39m(pos)\n\u001b[1;32m     10\u001b[0m   \u001b[39mreturn\u001b[39;00m pos\n\u001b[0;32m---> 13\u001b[0m day22(\u001b[39m*\u001b[39;49mdata22)\n",
+      "Cell \u001b[0;32mIn [152], line 5\u001b[0m, in \u001b[0;36mday22\u001b[0;34m(map, pos, diff, directions)\u001b[0m\n\u001b[1;32m      3\u001b[0m diff \u001b[39m=\u001b[39m make_turn(diff, turn)\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(n):\n\u001b[0;32m----> 5\u001b[0m   step \u001b[39m=\u001b[39m make_move(pos, diff, \u001b[39mmap\u001b[39;49m)\n\u001b[1;32m      6\u001b[0m   \u001b[39mif\u001b[39;00m step \u001b[39m==\u001b[39m pos:\n\u001b[1;32m      7\u001b[0m     \u001b[39mbreak\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn [147], line 12\u001b[0m, in \u001b[0;36mmake_move\u001b[0;34m(current, diff, map)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmake_move\u001b[39m(current, diff, \u001b[39mmap\u001b[39m):\n\u001b[1;32m     11\u001b[0m   (y, x) \u001b[39m=\u001b[39m tuple_add(current, diff)\n\u001b[0;32m---> 12\u001b[0m   \u001b[39mif\u001b[39;00m y \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mmap\u001b[39m)\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m \u001b[39mor\u001b[39;00m x \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mmap\u001b[39;49m[y])\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m \u001b[39mor\u001b[39;00m \u001b[39mmap\u001b[39m[y][x] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     13\u001b[0m     pos \u001b[39m=\u001b[39m wrap_position(current, diff, \u001b[39mmap\u001b[39m)\n\u001b[1;32m     14\u001b[0m   \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "def day22(map, pos, diff, directions):\n",
+    "  for turn, n in directions:\n",
+    "    diff = make_turn(diff, turn)\n",
+    "    for _ in range(n):\n",
+    "      step = make_move(pos, diff, map)\n",
+    "      if step == pos:\n",
+    "        break\n",
+    "      pos = step\n",
+    "    print(pos)\n",
+    "  return pos\n",
+    "    \n",
+    "\n",
+    "day22(*data22)"
+   ]
   }
  ],
  "metadata": {
