remove todos lol

--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2140,126 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_corners(map):\n",
-    "  corners = []\n",
-    "  length = min(len(line.strip()) for line in map)\n",
-    "  groups = [map[i:i+length] for i in range(0, len(map), length)]\n",
-    "  for i, group in enumerate(groups):\n",
-    "    line = group[0]\n",
-    "    for j in range(0, len(line), length):\n",
-    "      if line[j] == ' ':\n",
-    "        continue\n",
-    "      corners.append((i*length, j))\n",
-    "  return length-1, corners\n",
-    "\n",
-    "def get_local_map_index(y, x, length, translation):\n",
-    "  for t, (i, j) in enumerate(translation):\n",
-    "    if y >= i and y <= i+length and x >= j and x <= j+length:\n",
-    "      return t\n",
-    "  raise Exception(f'Not in map: ({y}, {x})')\n",
-    "\n",
-    "def abs_to_local_map(y, x, translation):\n",
-    "  index = get_local_map_index(y, x, *translation)\n",
-    "  i, j = translation[1][index]\n",
-    "  return y-i, x-j, index\n",
-    "\n",
-    "def local_to_abs_map(y, x, m, translation):\n",
-    "  i, j = translation[m]\n",
-    "  return (y+i, x+j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 266,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "((8, 14), (1, 0))\n",
-      "((7, 1), (-1, 0))\n",
-      "((2, 8), (0, 1))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# TODO: Function works on example but fails on actual input. Using function hardcode instead\n",
-    "# No idea if there is an underlying mathematical model here\n",
-    "def wrapy(y, x, wrapdiff, diff, length):\n",
-    "  if wrapdiff[0] == 1:\n",
-    "    y = 0\n",
-    "  elif wrapdiff[0] == -1:\n",
-    "    y = length\n",
-    "  elif wrapdiff[1] == -diff[1]:\n",
-    "    y = length-y\n",
-    "  elif wrapdiff[1] == diff[1]:\n",
-    "    y = y\n",
-    "  else:\n",
-    "    y = x\n",
-    "  return y\n",
-    "def wrapx(y, x, wrapdiff, diff, length):\n",
-    "  if wrapdiff[1] == 1:\n",
-    "    x = 0\n",
-    "  elif wrapdiff[1] == -1:\n",
-    "    x = length-1\n",
-    "  elif wrapdiff[0] == diff[0]:\n",
-    "    x = x\n",
-    "  elif wrapdiff[0] == -diff[0]:\n",
-    "    x = length-x\n",
-    "  elif wrapdiff[0] == diff[1]:\n",
-    "    x = length-y\n",
-    "  elif wrapdiff[0] == -diff[1]:\n",
-    "    x = y\n",
-    "  return x\n",
-    "\n",
-    "def wrap3d_example(current, diff, wrap_map, corners):\n",
-    "  length, translation = corners\n",
-    "  y, x, m = abs_to_local_map(*current, corners)\n",
-    "  wrapm, wrapdiff = wrap_map[(m, diff)]\n",
-    "  y, x = wrapy(y, x, wrapdiff, diff, length), wrapx(y, x, wrapdiff, diff, length)\n",
-    "  return local_to_abs_map(y, x, wrapm, translation), wrapdiff\n",
-    "\n",
-    "def gen_wrap_map(sparse):\n",
-    "  assert len(sparse) == 7\n",
-    "  full = sparse.copy()\n",
-    "  for source, (i, j) in sparse:\n",
-    "    target, (y, x) = sparse[(source, (i, j))]\n",
-    "    full[(target, (-y, -x))] = (source, (-i, -j))\n",
-    "  assert len(full) == 14\n",
-    "  return full\n",
-    "example_wrap_map = gen_wrap_map({\n",
-    "  (0, (-1, 0)):  (1, (1, 0)),\n",
-    "  (0, (0, -1)): (2, (1, 0)),\n",
-    "  (0, (0, 1)): (5, (0, -1)),\n",
-    "  (1, (0, -1)): (5, (-1, 0)),\n",
-    "  (1, (1, 0)): (4, (-1, 0)),\n",
-    "  (2, (1, 0)): (4, (0, 1)),\n",
-    "  (3, (0, 1)): (5, (1, 0)),\n",
-    "})\n",
-    "wrap_map = gen_wrap_map({\n",
-    "  (0, (-1, 0)): (5, (0, 1)), \n",
-    "  (0, (0, -1)): (3, (0, 1)), \n",
-    "  (1, (-1, 0)): (5, (-1, 0)),\n",
-    "  (1, (0, 1)): (4, (0, -1)), \n",
-    "  (1, (1, 0)): (2, (0, -1)), \n",
-    "  (2, (0, -1)): (3, (1, 0)), \n",
-    "  (4, (1, 0)): (5, (0, -1)), \n",
-    "})\n",
-    "\n",
-    "example_corners = get_corners(data22[0])\n",
-    "print(wrap3d_example((5, 11), (0, 1), example_wrap_map, example_corners)) # 8, 14\n",
-    "print(wrap3d_example((11, 10), (1, 0), example_wrap_map, example_corners)) # 7, 1\n",
-    "print(wrap3d_example((4, 6), (-1, 0), example_wrap_map, example_corners)) # 2, 8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -2268,7 +2149,7 @@
        "19534"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,6 +2186,33 @@
     "  }\n",
     "  return hardcode\n",
     "\n",
+    "def get_local_map_index(y, x, length, translation):\n",
+    "  for t, (i, j) in enumerate(translation):\n",
+    "    if y >= i and y <= i+length and x >= j and x <= j+length:\n",
+    "      return t\n",
+    "  raise Exception(f'Not in map: ({y}, {x})')\n",
+    "\n",
+    "def abs_to_local_map(y, x, translation):\n",
+    "  index = get_local_map_index(y, x, *translation)\n",
+    "  i, j = translation[1][index]\n",
+    "  return y-i, x-j, index\n",
+    "\n",
+    "def local_to_abs_map(y, x, m, translation):\n",
+    "  i, j = translation[m]\n",
+    "  return (y+i, x+j)\n",
+    "\n",
+    "def get_corners(map):\n",
+    "  corners = []\n",
+    "  length = min(len(line.strip()) for line in map)\n",
+    "  groups = [map[i:i+length] for i in range(0, len(map), length)]\n",
+    "  for i, group in enumerate(groups):\n",
+    "    line = group[0]\n",
+    "    for j in range(0, len(line), length):\n",
+    "      if line[j] == ' ':\n",
+    "        continue\n",
+    "      corners.append((i*length, j))\n",
+    "  return length-1, corners\n",
+    "\n",
     "def wrap3d(current, diff, corners):\n",
     "  y, x, m = abs_to_local_map(*current, corners)\n",
     "  diff, m, x, y = hardcode(x, y, corners[0])[(m, diff)]\n",
@@ -2315,6 +2223,13 @@
     "  return traverse_position(*data22, lambda p, diff: wrap3d(p, diff, cube_corners))\n",
     "\n",
     "day22(data22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 23"
    ]
   }
  ],
