--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
        "5564017"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,23 +1284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [339], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m       \u001b[39mreturn\u001b[39;00m \u001b[39mint\u001b[39m(\u001b[39mmin\u001b[39m([x\u001b[39m.\u001b[39mend \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(result)])) \u001b[39m*\u001b[39m \u001b[39m4000000\u001b[39m \u001b[39m+\u001b[39m i\n\u001b[1;32m     10\u001b[0m \u001b[39m# Takes a couple minutes - should use 45 degree rotation instead\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m day15_2(data15)\n",
-      "Cell \u001b[0;32mIn [339], line 6\u001b[0m, in \u001b[0;36mday15_2\u001b[0;34m(data, target)\u001b[0m\n\u001b[1;32m      3\u001b[0m tree\u001b[39m.\u001b[39maddi(\u001b[39m-\u001b[39mtarget, target\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(target\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[0;32m----> 6\u001b[0m   result \u001b[39m=\u001b[39m scan_depth(\u001b[39m*\u001b[39;49mdata, i)\n\u001b[1;32m      7\u001b[0m   \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(result) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m      8\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mint\u001b[39m(\u001b[39mmin\u001b[39m([x\u001b[39m.\u001b[39mend \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(result)])) \u001b[39m*\u001b[39m \u001b[39m4000000\u001b[39m \u001b[39m+\u001b[39m i\n",
-      "Cell \u001b[0;32mIn [337], line 12\u001b[0m, in \u001b[0;36mscan_depth\u001b[0;34m(sensors, beacons, target)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscan_depth\u001b[39m(sensors, beacons, target\u001b[39m=\u001b[39m\u001b[39m2000000\u001b[39m):\n\u001b[0;32m---> 12\u001b[0m   tree \u001b[39m=\u001b[39m IntervalTree()\n\u001b[1;32m     13\u001b[0m   \u001b[39mfor\u001b[39;00m sensor, beacon \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(sensors, beacons):\n\u001b[1;32m     14\u001b[0m     distance \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39mabs\u001b[39m(sensor[\u001b[39m0\u001b[39m]\u001b[39m-\u001b[39mbeacon[\u001b[39m0\u001b[39m]) \u001b[39m+\u001b[39m \u001b[39mabs\u001b[39m(sensor[\u001b[39m1\u001b[39m] \u001b[39m-\u001b[39m beacon[\u001b[39m1\u001b[39m]))\n",
-      "File \u001b[0;32m~/projects/advent-code/2022/.venv/lib/python3.11/site-packages/intervaltree/intervaltree.py:268\u001b[0m, in \u001b[0;36mIntervalTree.__init__\u001b[0;34m(self, intervals)\u001b[0m\n\u001b[1;32m    266\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_intervals \u001b[39m=\u001b[39m intervals\n\u001b[1;32m    267\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtop_node \u001b[39m=\u001b[39m Node\u001b[39m.\u001b[39mfrom_intervals(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_intervals)\n\u001b[0;32m--> 268\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mboundary_table \u001b[39m=\u001b[39m SortedDict()\n\u001b[1;32m    269\u001b[0m \u001b[39mfor\u001b[39;00m iv \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mall_intervals:\n\u001b[1;32m    270\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_add_boundaries(iv)\n",
-      "File \u001b[0;32m~/projects/advent-code/2022/.venv/lib/python3.11/site-packages/sortedcontainers/sorteddict.py:186\u001b[0m, in \u001b[0;36mSortedDict.__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    183\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbisect_key \u001b[39m=\u001b[39m _list\u001b[39m.\u001b[39mbisect_key\n\u001b[1;32m    184\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mirange_key \u001b[39m=\u001b[39m _list\u001b[39m.\u001b[39mirange_key\n\u001b[0;32m--> 186\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_update(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "11558423398893"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1564,7 +1559,7 @@
     "  return height\n",
     "\n",
     "\n",
-    "# Take a long time\n",
+    "# Takes a long time\n",
     "day17(data17, 2022), day17(data17, 1000000000000)"
    ]
   },
@@ -1775,7 +1770,7 @@
     "    return max([run_robots(blueprint, option[1], t-1) for option in sorted_potentials if option[0] >= threshold], key=lambda x: x[3])\n",
     "\n",
     "  def calculate(blueprints, n):\n",
-    "    for i, v in enumerate(blueprints):\n",
+    "    for _, v in enumerate(blueprints):\n",
     "      state = run_robots(v, default_state, n)\n",
     "      # print(i, state, state[3])\n",
     "      yield state[3]\n",
@@ -2043,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2071,7 @@
        "80392"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2144,7 @@
        "19534"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,18 +2181,18 @@
     "  }\n",
     "  return hardcode\n",
     "\n",
-    "def get_local_map_index(y, x, length, translation):\n",
+    "def get_local_index(y, x, length, translation):\n",
     "  for t, (i, j) in enumerate(translation):\n",
     "    if y >= i and y <= i+length and x >= j and x <= j+length:\n",
     "      return t\n",
-    "  raise Exception(f'Not in map: ({y}, {x})')\n",
+    "  raise Exception(f'Not in cube: ({y}, {x})')\n",
     "\n",
-    "def abs_to_local_map(y, x, translation):\n",
-    "  index = get_local_map_index(y, x, *translation)\n",
+    "def cube_to_local(y, x, translation):\n",
+    "  index = get_local_index(y, x, *translation)\n",
     "  i, j = translation[1][index]\n",
     "  return y-i, x-j, index\n",
     "\n",
-    "def local_to_abs_map(y, x, m, translation):\n",
+    "def local_to_cube(y, x, m, translation):\n",
     "  i, j = translation[m]\n",
     "  return (y+i, x+j)\n",
     "\n",
@@ -2214,9 +2209,9 @@
     "  return length-1, corners\n",
     "\n",
     "def wrap3d(current, diff, corners):\n",
-    "  y, x, m = abs_to_local_map(*current, corners)\n",
+    "  y, x, m = cube_to_local(*current, corners)\n",
     "  diff, m, x, y = hardcode(x, y, corners[0])[(m, diff)]\n",
-    "  return local_to_abs_map(y, x, m, corners[1]), diff\n",
+    "  return local_to_cube(y, x, m, corners[1]), diff\n",
     "\n",
     "def day22(data):\n",
     "  cube_corners = get_corners(data[0])\n",
