--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
+    "from bidict import bidict\n",
     "from collections import defaultdict, Counter, deque\n",
     "from functools import lru_cache, reduce, cmp_to_key\n",
     "from intervaltree import IntervalTree\n",
@@ -35,26 +36,10 @@
     "  return [int(x) for x in row.split(',')]\n",
     "\n",
     "def split_int_row(row: str) -> list[int]:\n",
-    "  return [int(x) for x in row]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 299,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = True\n",
-    "if (b := a) and True:\n",
-    "  print(b)"
+    "  return [int(x) for x in row]\n",
+    "\n",
+    "def tuple_add(a, b):\n",
+    "  return tuple(a[i] + (b[i] if i < len(b) else 0) for i in range(len(a)))"
    ]
   },
   {
@@ -1707,9 +1692,6 @@
     "  # ore_robot, clay_robot, obsidian_robot, geode_robot, ore, clay, obsidian, geode\n",
     "  default_state = (0,0,0,0, 1,0,0,0)\n",
     "\n",
-    "  def tuple_add(a, b):\n",
-    "    return tuple(a[i] + (b[i] if i < len(b) else 0) for i in range(len(a)))\n",
-    "\n",
     "  def prune_states(blueprint, state):\n",
     "    # Assume we will never not build if we can ever build anything we want\n",
     "    # As a consequence, we will also not build excess robots of a single type\n",
@@ -2062,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2071,7 +2053,7 @@
        "80392"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,9 +2064,6 @@
     "    return current\n",
     "  sign = -1 if (current[0] == 0) ^ (turn == 'R') else 1\n",
     "  return (sign * current[1], sign * current[0])\n",
-    "\n",
-    "def tuple_add(a, b):\n",
-    "  return tuple(a[i] + b[i] for i in range(len(a)))\n",
     "\n",
     "def wrap_position(current, diff, cube):\n",
     "  y, x = current\n",
@@ -2225,6 +2204,132 @@
    "metadata": {},
    "source": [
     "# Day 23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse23(data):\n",
+    "  elves = bidict()\n",
+    "  for y, line in enumerate(data):\n",
+    "    for x, spot in enumerate(line):\n",
+    "      if spot == '#':\n",
+    "        elves[len(elves)+1] = (x, y)\n",
+    "  return elves\n",
+    "\n",
+    "data23 = parse23(data(23))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bidict({1: (2, 1), 2: (3, 1), 3: (2, 2), 4: (2, 4), 5: (3, 4)})\n",
+      "collision 3 4\n",
+      "? bidict({1: (2, 0), 2: (3, 0), 3: (2, 3), 4: (2, 4), 5: (3, 3)}) {3}\n",
+      "0 [(2, 0), (3, 0), (2, 2), (2, 4), (3, 3)]\n",
+      "? bidict({1: (2, 1), 2: (3, 1), 3: (1, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "1 [(2, 1), (3, 1), (1, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "2 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "3 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "4 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "5 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "6 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "7 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "8 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n",
+      "? bidict({1: (2, 0), 2: (4, 1), 3: (0, 2), 4: (2, 5), 5: (4, 3)}) set()\n",
+      "9 [(2, 0), (4, 1), (0, 2), (2, 5), (4, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_directions(i):\n",
+    "  directions = [\n",
+    "    lambda x: None if any(([x[0], x[3], x[5]])) else 3, # North\n",
+    "    lambda x: None if any(([x[2], x[4], x[7]])) else 4, # South\n",
+    "    lambda x: None if any(x[:3]) else 1, # West\n",
+    "    lambda x: None if any(x[-3:]) else -2, # East\n",
+    "  ]\n",
+    "  return directions[i:] + directions[:i]\n",
+    "\n",
+    "def adjacency(position, elves, preferences):\n",
+    "  adjacents = [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "  options = [tuple_add(position, adj) for adj in adjacents]\n",
+    "  openings = [elves.inverse.get(option) for option in options]\n",
+    "  if not any(openings):\n",
+    "    return position\n",
+    "  for p in preferences:\n",
+    "    if index := p(openings):\n",
+    "      return options[index]\n",
+    "  return position\n",
+    "  \n",
+    "def dance_round(elves, stage):\n",
+    "  preferences = get_directions(stage)\n",
+    "  candidates, duplicates = bidict(), set()  \n",
+    "  for elf in elves:\n",
+    "    new = adjacency(elves[elf], elves, preferences)\n",
+    "    if collision := candidates.inverse.get(new):\n",
+    "      print('collision', collision, elf)\n",
+    "      duplicates.add(collision)\n",
+    "      candidates[elf] = elves[elf]\n",
+    "    else:\n",
+    "      candidates[elf] = new\n",
+    "  print('?', candidates, duplicates)\n",
+    "  for stuck in duplicates:\n",
+    "    candidates[stuck] = elves[stuck]\n",
+    "  return candidates\n",
+    "\n",
+    "def day23(elves):\n",
+    "  print(elves)\n",
+    "  for i in range(10):\n",
+    "    elves = dance_round(elves, i%4)\n",
+    "    print(i, [elves[x] for x in range(1, len(elves)+1)])\n",
+    "    # break\n",
+    "\n",
+    "day23(data23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dance_round(elves, stage):\n",
+    "  preferences = get_directions(stage)\n",
+    "  remaining = set(elves.keys())\n",
+    "  duplicates = set()\n",
+    "  candidates = bidict()  \n",
+    "  for diff, adj1, adj2 in directions:\n",
+    "    for elf in remaining.copy():\n",
+    "      new, d1, d2 = tuple_add(elves[elf], diff), tuple_add(elves[elf], adj1), tuple_add(elves[elf], adj2)\n",
+    "      if any((elves.inverse.get(new), elves.inverse.get(d1), elves.inverse.get(d2))):\n",
+    "        continue\n",
+    "      remaining.remove(elf)\n",
+    "      if collision := candidates.inverse.get(new):\n",
+    "        print('collision', collision, elf)\n",
+    "        duplicates.add(collision)\n",
+    "        candidates[elf] = elves[elf]\n",
+    "      else:\n",
+    "        candidates[elf] = new\n",
+    "  for stuck in duplicates:\n",
+    "    candidates[stuck] = elves[stuck]\n",
+    "  return candidates"
    ]
   }
  ],
